Bug 365620 - Cannot hide "Comment" from information panel
Summary: Cannot hide "Comment" from information panel
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: 16.12.2
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 388460 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-07-13 16:19 UTC by Christoph Feck
Modified: 2018-01-06 23:48 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
"Configure" option for Dolphin's "Information Panel" (30.29 KB, image/png)
2017-09-08 17:11 UTC, Paul
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2016-07-13 16:19:22 UTC
Using the configure dialog for the information panel, I can hide Tags and Rating, but not Comment.

(Dolphin 16.04.2 from openSUSE tumbleweed)
Comment 1 Paul 2017-09-08 17:11:15 UTC
Created attachment 107761 [details]
"Configure" option for Dolphin's "Information Panel"

Still unable to hide/disable the comment field.

Using:
Version 17.08.0
KDE Frameworks 5.37.0
Qt 5.9.1 (built against 5.9.1)
Comment 2 Christoph Feck 2018-01-02 16:47:26 UTC
*** Bug 388460 has been marked as a duplicate of this bug. ***
Comment 3 Michael Heidelbach 2018-01-06 11:05:19 UTC
Comments are not show w/ 
  userComment=false
  
in 
  ~/.config/baloofileinformationrc
Comment 4 Paul 2018-01-06 12:44:55 UTC
@Michael Heidelbach

Thanks for that information. :)


Regarding the bug report: this setting still should be accessible via the configure dialogue for the information panel.  Directly editing baloofileinformationrc can only be regarded as a work-around.
Comment 5 Michael Heidelbach 2018-01-06 13:54:35 UTC
@Paul: Right!
Comment 6 Nate Graham 2018-01-06 23:48:33 UTC
Git commit caf155114b3b3b41a26eebd46a938104c2eea9b3 by Nathaniel Graham, on behalf of Michael Heidelbach.
Committed on 06/01/2018 at 23:48.
Pushed by ngraham into branch 'Applications/17.12'.

Added 'Comment' option to  metadata config-dialog

Summary:

DISCLAIMER:
I have no idea how this code really works. It was just a guess.

Test Plan:
compile baloo-widgets, run dolphin
{F5624713}

Reviewers: #dolphin, ngraham

Reviewed By: #dolphin, ngraham

Subscribers: ngraham, vhanda

Differential Revision: https://phabricator.kde.org/D9700

M  +2    -2    src/filemetadataconfigwidget.cpp

https://commits.kde.org/baloo-widgets/caf155114b3b3b41a26eebd46a938104c2eea9b3