Added 'Comment' option to  metadata config-dialog

Summary:
BUG: 365620

DISCLAIMER:
I have no idea how this code really works. It was just a guess.

Test Plan:
compile baloo-widgets, run dolphin
{F5624713}

Reviewers: #dolphin, ngraham

Reviewed By: #dolphin, ngraham

Subscribers: ngraham, vhanda

Differential Revision: https://phabricator.kde.org/D9700